smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/shape-name-syntax2.smithy
// Syntax error at line 4, column 11: Unexpected character: '%' | Model
namespace com.foo

structure %Invalid {}
